--- a/Obsidian.theme.css
+++ b/Obsidian.theme.css
@@ -10,8 +10,8 @@
 */
 
 /*Import Obsidian Main */
-@import url("https://mimir-gxp.github.io/Obsidian/css/main-3.0.1.css");
-@import url("https://mimir-gxp.github.io/Obsidian/css/MacTitleBar.css");
+@import url("https://mimir-gxp.github.io/Obsidian/css/update/main-3.0.1.css");
+@import url("https://mimir-gxp.github.io/Obsidian/css/addons/MacTitleBar.css");
 
 :root {
 
