--- a/css/update/main-2.0.1.css
+++ b/css/update/main-2.0.1.css
@@ -1,6 +1,6 @@
 /**
 * @name Obsidian
-* @version 2.0.2
+* @version 2.0.1
 * @description Obsidian Discord Theme.
 * @author ᛗᛁᛗᛁᚱ
 * @authorId 106097290640363520
@@ -10,7 +10,7 @@
 */
 
 /* Base - FrostedGlass By Gibbu ---> https://github.com/Gibbu */
-@import url("https://mimir-gxp.github.io/Obsidian/css/base.css");
+@import url("https://mimir-gxp.github.io/Obsidian/css/update/base.css");
 
 /* Extension */
 @import url("https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css");
@@ -76,7 +76,7 @@
     --font-code: 'Whitney';
     --update-notice-1: none;
 
-    --HSL-server-icon-size: 50px;
+    --HSL-server-icon-size: 45px;
     --HSL-server-spacing: 8px;
 
     --badge-size: 22px;
@@ -86,10 +86,10 @@
     --badges-everywhere-size: 15px;
     /*default = 15px*/
 
-    --version: "v2.0.2";
+    --version: "v2.0.1";
     --obsidian: "OBSIDIAN";
     /* --logo-obsidian: url(""); */
-    
+
 }
 
 .theme-light {
@@ -247,14 +247,6 @@ blockquote, code {
     height: 24px;
     pointer-events: auto;
     -webkit-app-region: no-drag;
-}
-
-/* app padding */
-
-#app-mount .layers-OrUESM {
-    margin: var(--window-padding);
-    overflow: hidden;
-    border-radius: var(--window-roundness);
 }
 
 /*User POPUP */
@@ -1561,10 +1553,6 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     margin-bottom: 5px;
 }
 
-.reactionDefault-1Sjj1f, .reactionSelected-1aMb2K {
-    border-radius: 20px;
-}
-
 /* Button Video & Screen */
 
 .lookFilled-yCfaCM.colorBrand-I6CyqQ:hover {
@@ -1632,10 +1620,6 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
 .container-2rzKKA {
     border-radius: 20px;
     transition: 0.3s;
-}
-
-.container-3i3IzO {
-    border-radius: 20px;
 }
 
 /* Notification Settings */
@@ -1775,11 +1759,7 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
 
 .listRow-2nO1T6 {
     transition: 0.3s;
-    border-radius: 20px !important;
-}
-
-.connectedAccount-1xKpli {
-    border-radius: 20px !important;
+    border-radius: 20px;
 }
 
 /* BD Input fix */
@@ -1794,27 +1774,6 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     padding: 4px 8px;
 }
 
-/* Edit Message */
-
-.channelTextArea-220_Gz .buttons-uaqb-5 {
-    opacity: 1;
-}
-
-/* discord notice */
-
-.notice-5OG6bf {
-    border-radius: 20px;
-}
-
-/* Event */
-.textInput-3g8y92 {
-    background-color: transparent;
-}
-
-/* Create Channel & Category */
-#app-mount > div:nth-child(7) > div.layer-1Ixpg3 > form > div > div > div > div > div > div.flex-2S1XBF.flex-3BkGQD.vertical-3aLnqW.flex-3BkGQD.directionColumn-3pi1nm.justifyStart-2Mwniq.alignCenter-14kD11.noWrap-hBpHBz.header-1zd7se.header-o8wV_s {
-    box-shadow: none !important;
-}
 
 /* Server Settings */
 
@@ -1830,108 +1789,41 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
         margin-top: 0px;
     }
     /* Discovery */
-    .css-eo20y5 {
-        visibility: hidden;
-    }
-    .css-gvi9bl-control {
-        border-radius: 20px;
-    }
-    .theme-dark .subcategory-1zDTD3 {
-        background-color: var(--gradient-secondary);
-        border-radius: 20px;
-    }
-    .inputWrapper-3a4ywb {
-        border-radius: 20px;
-    }
-    .tag-ijGVSm {
-        background-color: var(--gradient-secondary);
-        border-radius: 20px;
-    }
 
     /* Custom Invite Link */
-    .prefixInput-w72mM6 {
-        border-radius: 20px;
-    }
 
-    .prefixInputInput-yS14_1, .prefixInputInput-yS14_1:hover, .prefixInputInput-yS14_1:focus  {
-        background-color: transparent !important;
-    }
+
+
+
+/* Text Color */
+
+
 
 
 
 /* Emoji */
 
-.contentWrapper-3vHNP2 {
-    background-color: var(--background-obsidian);
-    border-radius: 20px;
-}
 
 
-.emojiPicker-6YCk8a {
-    border-radius: 20px !important;
-    background-color: var(--background-obsidian) !important;
-}
-
-.container-1SX9VC {
-    border-radius: 20px;
-    background-color: rgba(1, 1, 1, 0.4) !important;
-}
-
-.input-2FSSDe, .input-2FSSDe:hover, .input-2FSSDe:focus {
-    background-color: transparent !important;
-}
-
-.wrapper-1NNaWG:after {
-    display: none;
-}
-
-.wrapper-1NNaWG {
-    border-radius: 20px;
-    padding-left: 8px;
-    backdrop-filter: brightness(75%);
-    box-shadow: 0px 5px 10px rgb(0 0 0 / 40%) !important;
-}
-
-.unicodeShortcut-3N8oDe {
-    background-color: var(--background-obsidian);
-    border-radius: 0px 0px 0px 20px !important;
-}
-
-.navButtonActive-1EqC5l {
-    background: var(--gradient);
-    transition: 0.3s;
-    color: #fff;
-}
-
-.scroller-2MALzE {
-    height: 99%;
-}
 
 /* Logo */
 
-#app-mount .guilds-2JjMmN .tutorialContainer-1pL9QS .childWrapper-1j_1ub {
-    background: transparent;
-    background-color: transparent;
-}
 
-/* Fix bug color of input */
+/* ------------------ TODO LIST ------------------- */
 
-.lookFilled-1GseHa.select-1Ia3hD {
-    background-color: var(--background-secondary) !important;
-    border-color: var(--background-secondary) !important;
-}
+/*
 
-/* Tchat voice channel */
+- EMOJI
 
-.container-3XgAHv {
-    background-color: transparent !important;
-}
+- TEXT COLOR
 
-/* Public text under server name */
+- LOGO
 
-.communityInfoPill-2Mll66 {
-    background: var(--gradient) !important;
-}
+- TOUS DANS SERVER SETTINGS
+
+
+*/
+
 
 /* =====================================PLUGIN SECTION===================================== */
 
