--- a/css/update/main-3.0.0.css
+++ b/css/update/main-3.0.0.css
@@ -1,6 +1,6 @@
 /**
 * @name Obsidian
-* @version 2.0.1
+* @version 3.0.0
 * @description Obsidian Discord Theme.
 * @author ᛗᛁᛗᛁᚱ
 * @authorId 106097290640363520
@@ -10,7 +10,7 @@
 */
 
 /* Base - FrostedGlass By Gibbu ---> https://github.com/Gibbu */
-@import url("https://mimir-gxp.github.io/Obsidian/css/base.css");
+@import url("https://mimir-gxp.github.io/Obsidian/css/update/base.css");
 
 /* Extension */
 @import url("https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css");
@@ -19,7 +19,7 @@
   
 :root {
     --background-image: url('https://i.imgur.com/kYW2H5C.jpg');
-    --background-image-blur: 40px;
+    --background-image-blur: 55px;
     --background-image-size: cover;
     --background-image-position: center;
     --background-low: rgba(0, 0, 0, 0.2);
@@ -35,12 +35,12 @@
     --gradient-direction-alert: 260deg;
 
     --popout-modal-image: url('https://i.imgur.com/kYW2H5C.jpg');
-    --popout-modal-blur: 100px;
+    --popout-modal-blur: 55px;
     --popout-modal-size: cover;
     --popout-modal-position: center;
 
-    --home-button-image: url('https://i.imgur.com/JrREWjJ.png');
-    --home-button-size: 52px;
+    --home-button-image: url('https://imgur.com/HaT3Die.png');
+    --home-button-size: 50px;
     --home-button-position: center;
 
     --server-width: 350px;
@@ -66,9 +66,6 @@
     --tint-colour: 255, 255, 255;
     --tint-brightness: 0;
 
-    --window-padding: 20px;
-    --window-roundness: 20px;
-
     --scrollbar-colour: #ffffff0d;
     --link-colour: #4A60D6FF;
     --show-gift-gif-buttons: block;
@@ -76,7 +73,7 @@
     --font-code: 'Whitney';
     --update-notice-1: none;
 
-    --HSL-server-icon-size: 45px;
+    --HSL-server-icon-size: 50px;
     --HSL-server-spacing: 8px;
 
     --badge-size: 22px;
@@ -86,7 +83,7 @@
     --badges-everywhere-size: 15px;
     /*default = 15px*/
 
-    --version: "v2.0.1";
+    --version: "v3.0.0 Release";
     --obsidian: "OBSIDIAN";
     /* --logo-obsidian: url(""); */
 
@@ -251,14 +248,87 @@ blockquote, code {
 
 /*User POPUP */
 
-#app-mount [class*=userPopout][aria-modal=true] {
-    border-radius: 20px;
-}
-
 .textarea-_59yqs {
     padding: 11px;
     height: 36px !important;
 }
+
+.popoutBanner-3cqRD9 .pencilContainer-18TrEJ, .popoutBannerPremium-3i5EEI .pencilContainer-18TrEJ {
+    top: 100%;
+}
+
+.divider-1wtgZ3 {
+    display: none;
+}
+
+#app-mount .userPopout-2j1gM4 {
+    border-radius: 20px !important;
+    width: 350px !important;
+    box-sizing: border-box;
+  }
+  #app-mount .userPopout-2j1gM4 .avatarWrapper-eenWra {
+    position: absolute;
+    top: 25px;
+    right: 18px;
+    left: unset;
+  }
+  
+  #app-mount .userPopout-2j1gM4 .headerTop-3GPUSF {
+    padding: 0;
+    position: absolute;
+    top: 0;
+    padding: 24px;
+    box-sizing: border-box;
+    height: 120px;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    gap: 8px;
+  }
+  #app-mount .headerNormal-3Zn_yu {
+    width: 100%;
+    overflow: hidden;
+    height: 160px;
+    position: relative;
+  }
+  #app-mount .headerNormal-3Zn_yu .banner-1YaD3N {
+    -webkit-mask: linear-gradient(rgba(0, 0, 0, 0.8), transparent 90%);
+            mask: linear-gradient(rgba(0, 0, 0, 0.8), transparent 90%);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  .profileBannerPremium-KD60EB {
+    -webkit-mask: linear-gradient(rgba(0, 0, 0, 0.9), transparent 90%);
+            mask: linear-gradient(rgba(0, 0, 0, 0.9), transparent 90%);
+  }
+
+  #app-mount .nickname-t08Mck {
+    max-width: 180px;
+  }
+  #app-mount .profileBadges-2pItdR {
+    position: static;
+    max-width: unset;
+    justify-content: flex-start;
+  }
+  #app-mount .body-2wLx-E {
+    margin-top: -24px;
+    padding: 0 24px 24px !important;
+  }
+
+  #app-mount .body-2wLx-E::-webkit-scrollbar {
+    display: none;
+  }
+
+  #app-mount .footer-3naVBw {
+    padding: 0 24px 24px;
+    margin: 0;
+  }
 
 /*SHADOW */
 
@@ -359,6 +429,15 @@ blockquote, code {
 }
 
 /*Server Channel / Private Message & width */
+
+/* Padding Channel */
+
+.scroller-1ox3I2 {
+    padding-right: 11px !important;
+    padding-left: 4px;
+}
+
+/* ---------------*/
 
 #app-mount .sidebar-1tnWFu {
     border-radius: 0;
@@ -564,23 +643,39 @@ input.inputDefault-3FGxgL.input-2g-os5.noBorder-2p63tM {
         transition: 0.3s;
     }
 
-    .layer-86YKbF, .standardSidebarView-E9Pc3j, .contentRegionScroller-2_GT_N, .sidebarRegionScroller-FXiQOh {background-color: transparent;}
-    .contentColumn-1C7as6, .customColumn-2n-oKU {
-	    max-width: 100%;
-    }
-
     .sidebarRegion-1VBisG {
         max-width: 300px;
         min-width: 300px;
     }
 
-    .micTest---VquM {
-        max-width: 550px;
-    }
-
     .sidebar-nqHbhN {
         width: 250px;
         padding: 60px 20px 60px 0px;
+    }
+    
+    /* Close Button */
+
+    .contentRegionScroller-2_GT_N .tools-kIrEGr, .toolsContainer-25FL6V {
+        position: fixed !important;
+        right: 15px !important;
+        top: 35px !important;
+        padding: 30px !important;
+    }
+
+    .toolsContainer-25FL6V {
+        -webkit-box-flex: unset;
+        flex: unset;
+        margin-right: unset;
+        width: unset;
+    }
+
+    .closeButton-PCZcma {
+        border-width: 3px;
+        border-style: solid;
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        cursor: pointer;
     }
 
     /* BIILING */
@@ -697,37 +792,43 @@ input.inputDefault-3FGxgL.input-2g-os5.noBorder-2p63tM {
         border-radius: 20px;
     }
 
-    /* notif popup */
+    /* HypeSquad */
 
-    .container-20TyK0 {
-        border-radius: 20px;
-        background-color: var(--background-obsidian);
-    }
-
-    /* Tchat Input */
-
-    .scrollableContainer-15eg7h {
-        border-radius: 30px;
-    }
-    .buttons-uaqb-5 {
-        opacity: 0;
-        transition: opacity 0.5s;
-    }
-    .channelTextArea-1FufC0:hover .buttons-uaqb-5 {
-        opacity: 1;
+    .membershipDialogHeading-2YNliA, .membershipDialogHouseDescription-2uFjjO, .membershipDialogHouseName-1yc2Ci, .membershipDialogSwitchHouses-2bOt9w {
+        color: whitesmoke;
     }
 
-    .searchBar-jGtisZ, .searchBar-3TnChZ .searchBarComponent-3N7dCG {
-        background-color: var(--channeltextarea-background);
-        border-radius: 20px;
-    }
+/* notif popup */
+
+.container-20TyK0 {
+    border-radius: 20px;
+    background-color: var(--background-obsidian);
+}
+
+/* Tchat Input */
+
+.scrollableContainer-15eg7h {
+    border-radius: 30px;
+}
+.buttons-uaqb-5 {
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.channelTextArea-1FufC0:hover .buttons-uaqb-5 {
+    opacity: 1;
+}
+
+.searchBar-jGtisZ, .searchBar-3TnChZ .searchBarComponent-3N7dCG {
+    background-color: var(--channeltextarea-background);
+    border-radius: 20px;
+}
   
 
-    /* role=menu */
+/* role=menu */
 
-    #app-mount [role=menu] {
-        border-radius: 20px;
-    }
+#app-mount [role=menu] {
+    border-radius: 20px;
+}
 
 /* Server & Folders */
 
@@ -984,8 +1085,10 @@ input.inputDefault-3FGxgL.input-2g-os5.noBorder-2p63tM {
 
 .role-2TIOKu:hover {
     opacity: 0.4;
-    padding-left: 8px;
-    padding-right: 10px;
+}
+
+#app-mount .rolesList-3uZoaa {
+    gap: 3px;
 }
 
 .roleCircle-1EgnFN {
@@ -1453,6 +1556,10 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     border: 2px solid var(--gradient-primary-alert);
 }
 
+.lookOutlined-3yKVGo.colorRed-rQXKgM:hover {
+    background-color: transparent;
+}
+
 /* Friend & PM Section */
 
 .interactive-1vLZ_I {
@@ -1500,6 +1607,17 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     background-color: var(--channeltextarea-background);
 }
 
+.inputDefault-3FGxgL {
+    padding: 10px !important;
+}
+
+.addFriendHint-1EVQJY {
+    padding-left: 10px !important;
+}
+
+.addFriendInputWrapper-kkoSV9 {
+    border-radius: 20px;
+}
 
 
 /* -------------------------------------- */
@@ -1551,6 +1669,10 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     background: var(--background-active);
     border-radius: 20px;
     margin-bottom: 5px;
+}
+
+.reactionDefault-1Sjj1f, .reactionSelected-1aMb2K {
+    border-radius: 20px;
 }
 
 /* Button Video & Screen */
@@ -1620,6 +1742,10 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
 .container-2rzKKA {
     border-radius: 20px;
     transition: 0.3s;
+}
+
+.container-3i3IzO {
+    border-radius: 20px;
 }
 
 /* Notification Settings */
@@ -1759,7 +1885,11 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
 
 .listRow-2nO1T6 {
     transition: 0.3s;
-    border-radius: 20px;
+    border-radius: 20px !important;
+}
+
+.connectedAccount-1xKpli {
+    border-radius: 20px !important;
 }
 
 /* BD Input fix */
@@ -1774,6 +1904,27 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     padding: 4px 8px;
 }
 
+/* Edit Message */
+
+.channelTextArea-220_Gz .buttons-uaqb-5 {
+    opacity: 1;
+}
+
+/* discord notice */
+
+.notice-5OG6bf {
+    border-radius: 20px;
+}
+
+/* Event */
+.textInput-3g8y92 {
+    background-color: transparent;
+}
+
+/* Create Channel & Category */
+#app-mount > div:nth-child(7) > div.layer-1Ixpg3 > form > div > div > div > div > div > div.flex-2S1XBF.flex-3BkGQD.vertical-3aLnqW.flex-3BkGQD.directionColumn-3pi1nm.justifyStart-2Mwniq.alignCenter-14kD11.noWrap-hBpHBz.header-1zd7se.header-o8wV_s {
+    box-shadow: none !important;
+}
 
 /* Server Settings */
 
@@ -1789,41 +1940,108 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
         margin-top: 0px;
     }
     /* Discovery */
+    .css-eo20y5 {
+        visibility: hidden;
+    }
+    .css-gvi9bl-control {
+        border-radius: 20px;
+    }
+    .theme-dark .subcategory-1zDTD3 {
+        background-color: var(--gradient-secondary);
+        border-radius: 20px;
+    }
+    .inputWrapper-3a4ywb {
+        border-radius: 20px;
+    }
+    .tag-ijGVSm {
+        background-color: var(--gradient-secondary);
+        border-radius: 20px;
+    }
 
     /* Custom Invite Link */
+    .prefixInput-w72mM6 {
+        border-radius: 20px;
+    }
 
-
-
-
-/* Text Color */
-
-
+    .prefixInputInput-yS14_1, .prefixInputInput-yS14_1:hover, .prefixInputInput-yS14_1:focus  {
+        background-color: transparent !important;
+    }
 
 
 
 /* Emoji */
 
+.contentWrapper-3vHNP2 {
+    background-color: var(--background-obsidian);
+    border-radius: 20px;
+}
 
 
+.emojiPicker-6YCk8a {
+    border-radius: 20px !important;
+    background-color: var(--background-obsidian) !important;
+}
+
+.container-1SX9VC {
+    border-radius: 20px;
+    background-color: rgba(1, 1, 1, 0.4) !important;
+}
+
+.input-2FSSDe, .input-2FSSDe:hover, .input-2FSSDe:focus {
+    background-color: transparent !important;
+}
+
+.wrapper-1NNaWG:after {
+    display: none;
+}
+
+.wrapper-1NNaWG {
+    border-radius: 20px;
+    padding-left: 8px;
+    backdrop-filter: brightness(75%);
+    box-shadow: 0px 5px 10px rgb(0 0 0 / 40%) !important;
+}
+
+.unicodeShortcut-3N8oDe {
+    background-color: var(--background-obsidian);
+    border-radius: 0px 0px 0px 20px !important;
+}
+
+.navButtonActive-1EqC5l {
+    background: var(--gradient);
+    transition: 0.3s;
+    color: #fff;
+}
+
+.scroller-2MALzE {
+    height: 99%;
+}
 
 /* Logo */
 
+#app-mount .guilds-2JjMmN .tutorialContainer-1pL9QS .childWrapper-1j_1ub {
+    background: transparent;
+    background-color: transparent;
+}
 
-/* ------------------ TODO LIST ------------------- */
+/* Fix bug color of input */
 
-/*
+.lookFilled-1GseHa.select-1Ia3hD {
+    background-color: var(--background-secondary) !important;
+    border-color: var(--background-secondary) !important;
+}
 
-- EMOJI
+/* Tchat voice channel */
 
-- TEXT COLOR
+.container-3XgAHv {
+    background-color: transparent !important;
+}
 
-- LOGO
+/* Public text under server name */
 
-- TOUS DANS SERVER SETTINGS
-
-
-*/
-
+.communityInfoPill-2Mll66 {
+    background: var(--gradient) !important;
+}
 
 /* =====================================PLUGIN SECTION===================================== */
 
