--- a/css/update/main-3.0.1.css
+++ b/css/update/main-3.0.1.css
@@ -303,6 +303,7 @@ blockquote, code {
     top: 0;
     right: 0;
     bottom: 0;
+    max-width: 350px !important;
   }
 
   .profileBannerPremium-KD60EB {
