--- a/css/update/main-3.0.1.css
+++ b/css/update/main-3.0.1.css
@@ -2095,6 +2095,24 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     border-radius: 20px;
 }
 
+/* add account */
+
+.list-3-WAYB {
+    border-radius: 20px;
+}
+
+.theme-dark.authBox-1HR6Ha {
+    color: #72767d;
+    background: var(--background-obsidian);
+    border-radius: 20px 20px 0px 0px;
+}
+
+.theme-dark.navRow-dG-XX8 {
+    background: var(--background-obsidian);
+    border-radius: 0px 0px 20px 20px;
+    box-shadow: 0px -5px 5px rgb(0 0 0 / 20%);
+}
+
 /* =====================================PLUGIN SECTION===================================== */
 
 /* Plugin BetterFormatingRedux */
