fix emoji popup

--- a/css/update/main-3.0.1.css
+++ b/css/update/main-3.0.1.css
@@ -2046,6 +2046,10 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     pointer-events: none;
 }
 
+.layer-2aCOJ3 {
+    padding: 30px;
+}
+
 /* Logo */
 
 #app-mount .guilds-2JjMmN .tutorialContainer-1pL9QS .childWrapper-1j_1ub {
