--- a/Obsidian.theme.css
+++ b/Obsidian.theme.css
@@ -1,6 +1,6 @@
 /**
 * @name Obsidian
-* @version 3.0.1 Release
+* @version 3.0.2 Release
 * @description Obsidian Discord Theme.
 * @author ᛗᛁᛗᛁᚱ
 * @authorId 106097290640363520
@@ -11,7 +11,12 @@
 
 /*Import Obsidian Main */
 @import url("https://mimir-gxp.github.io/Obsidian/css/update/main-3.0.1.css");
-@import url("https://mimir-gxp.github.io/Obsidian/css/addons/MacTitleBar.css");
+
+/*Addons*/
+    /*Honzizontal server List */
+    @import url("https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css");
+    /*Mac TitleBar*/
+    @import url("https://mimir-gxp.github.io/Obsidian/css/addons/MacTitleBar.css");
 
 :root {
 
