--- a/css/update/main-3.0.2.css
+++ b/css/update/main-3.0.2.css
@@ -2042,6 +2042,10 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     pointer-events: none;
 }
 
+.layer-2aCOJ3 {
+    padding: 30px;
+}
+
 /* Logo */
 
 #app-mount .guilds-2JjMmN .tutorialContainer-1pL9QS .childWrapper-1j_1ub {
@@ -2089,6 +2093,24 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
 
 .card-PQEqCK {
     border-radius: 20px;
+}
+
+/* add account */
+
+.list-3-WAYB {
+    border-radius: 20px;
+}
+
+.theme-dark.authBox-1HR6Ha {
+    color: #72767d;
+    background: var(--background-obsidian);
+    border-radius: 20px 20px 0px 0px;
+}
+
+.theme-dark.navRow-dG-XX8 {
+    background: var(--background-obsidian);
+    border-radius: 0px 0px 20px 20px;
+    box-shadow: 0px -5px 5px rgb(0 0 0 / 20%);
 }
 
 /* =====================================PLUGIN SECTION===================================== */
