--- a/css/update/main-3.0.2.css
+++ b/css/update/main-3.0.2.css
@@ -2117,6 +2117,91 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     box-shadow: 0px -5px 5px rgb(0 0 0 / 20%);
 }
 
+/* Server Profile */
+.body-16rSsp {
+    margin-top: 12px;
+    border-radius: 20px;
+}
+.bioTextArea-dDGOeC {
+    background-color: var(--background-secondary);
+}
+.headerTop-3GPUSF {
+    padding: 70px 16px 45px;
+}
+.multiInputLast-35zVz0 input {
+    padding-left: 32px !important;
+}
+.inputPrefix-1VU7MB {
+    padding-top: 11px;
+    padding-left: 17px;
+}
+
+/* Edit Channel */
+.container-1S70rv {
+    border-radius: 20px;
+    width: 250px;
+    overflow: hidden;
+}
+
+.theme-dark .autocompleteArrow-jJE9TQ, .theme-dark .header-3i_Csh {
+    background-color: var(--background-obsidian);
+}
+
+.theme-dark .container-1S70rv .sectionTag-28mLyE {
+    background-color: var(--background-obsidian);
+}
+
+.autocompleteShadow-2nfsSy {
+    border-radius: 20px;
+}
+
+.container-1S70rv .input-2lpFVz {
+    padding-left: 5px;
+}
+
+.rowInner-3uonq8 {
+    border-radius: 20px;
+}
+
+.group-LWHoGI {
+    border: 2px solid var(--background-active);
+    border-radius: 20px;
+}
+
+.deny-1GO6vI {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.allow-1h61-Z {
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.passthrough--fbdFR.selected-3jieYB {
+    background-color: var(--background-secondary);
+}
+
+.cardFolder-3H4uH4 {
+    background: var(--background-secondary);
+    border-radius: 8px !important;
+}
+
+/* server settings role */
+
+.container-3EtAkD {
+    border-radius: 20px;
+}
+.header-JUTO-g {
+    margin-left: -25px;
+    margin-right: -25px;
+}
+.stickyHeaderElevated-dNSSrJ {
+    backdrop-filter: blur(10px);
+    transition: 0.3s;
+    box-shadow: -10px 2px 10px rgb(0 0 0 / 35%) !important;
+}
+
 /* =====================================PLUGIN SECTION===================================== */
 
 /* Plugin BetterFormatingRedux */
