--- a/css/update/main-3.0.2.css
+++ b/css/update/main-3.0.2.css
@@ -2193,6 +2193,7 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     border-radius: 20px;
 }
 .header-JUTO-g {
+    padding: 60px 20px 16px;
     margin-left: -25px;
     margin-right: -25px;
 }
@@ -2200,6 +2201,10 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     backdrop-filter: blur(10px);
     transition: 0.3s;
     box-shadow: -10px 2px 10px rgb(0 0 0 / 35%) !important;
+}
+.memberRow-1FhJgR {
+    border-radius: 12px;
+    transition: 0.3s;
 }
 
 /* =====================================PLUGIN SECTION===================================== */
