--- a/css/addons/MacTitleBar.css
+++ b/css/addons/MacTitleBar.css
@@ -10,11 +10,6 @@
     height: 24px;
 }
 
-.winButton-3UMjdg {
-    pointer-events: auto;
-    -webkit-app-region: no-drag;
-}
-
 .withFrame-2dL45i .winButton-3UMjdg>svg {
     display: none;
 }
@@ -25,69 +20,31 @@
 
 .withFrame-2dL45i .winButton-3UMjdg {
     pointer-events: none;
-    margin-left: 12px !important;
+    margin-left: -4px;
     top: 0;
 }
 
 .withFrame-2dL45i .winButton-3UMjdg::after {
     content: "";
+    padding: 7px;
     border-radius: 50px;
     pointer-events: fill;
     transition-duration: 200ms;
 }
 
 .withFrame-2dL45i .winButtonClose-3Q8ZH5::after {
-    background-image: url('https://mimir-gxp.github.io/Obsidian/img/close.png') !important;
-    background-size: 100%;
-    width: 18px;
-    height: 18px;
-    margin-top: 1px;
-}
-
-.withFrame-2dL45i .winButtonClose-3Q8ZH5:hover::after {
-    background-image: url('https://mimir-gxp.github.io/Obsidian/img/closeHover.png') !important;
-    background-size: 100%;
-    width: 18px;
-    height: 18px;
-    margin-top: 1px;
+    background-color: var(--close-button-color) !important;
+    margin-top: 0px;
 }
 
 .withFrame-2dL45i .winButtonMinMax-3RsPUg:nth-child(3)::after {
-    background-image: url('https://mimir-gxp.github.io/Obsidian/img/max.png') !important;
-    background-size: 100%;
-    width: 18px;
-    height: 18px;
-    margin-top: 1px;
-}
-
-.withFrame-2dL45i .winButtonMinMax-3RsPUg:nth-child(3) {
-    margin-left: -66px !important;
-}
-
-
-.withFrame-2dL45i .winButtonMinMax-3RsPUg:nth-child(3):hover::after {
-    background-image: url('https://mimir-gxp.github.io/Obsidian/img/maxHover.png') !important;
-    background-size: 100%;
-    width: 18px;
-    height: 18px;
-    margin-top: 1px;
-
+    background-color: var(--maximize-button-color) !important;
+    margin-top: 0px;
 }
 
 .withFrame-2dL45i .winButtonMinMax-3RsPUg:nth-child(4):after {
-    background-image: url('https://mimir-gxp.github.io/Obsidian/img/min.png') !important;
-    background-size: cover;
-    width: 18px;
-    height: 18px;
-    margin-top: 1px;
-}
-
-.withFrame-2dL45i .winButtonMinMax-3RsPUg:nth-child(4):hover:after {
-    background-image: url('https://mimir-gxp.github.io/Obsidian/img/minHover.png') !important;
-    background-size: cover;
-    width: 18px;
-    height: 18px;
-    margin-top: 1px;
+    background-color: var(--minimize-button-color) !important;
+    margin-top: 0px;
 }
 
 .typeWindows-2-g3UY>div:hover::after {
