--- a/css/update/main-3.0.5.css
+++ b/css/update/main-3.0.5.css
@@ -2310,6 +2310,14 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
     transition: 0.3s;
     transform: translateX(3px);
 }
+
+/* Selector */
+
+.tag-4fIUbr {
+    border-radius: 20px;
+    background-color: var(--gradient-secondary);
+}
+
 /* =====================================PLUGIN SECTION===================================== */
 
 /* Plugin BetterFormatingRedux */
