fix speak background fade

--- a/css/update/main-3.0.5.css
+++ b/css/update/main-3.0.5.css
@@ -1372,7 +1372,7 @@ input.inputDefault-3FGxgL.input-2g-os5.noBorder-2p63tM {
     width: 150px !important;
 }
 
-.voiceUser-3nRK-K .avatarContainer-3FF_Km:after {
+.voiceUser-3nRK-K .avatarSpeaking-2pCGrZ:after {
     content: "";
     width: 0;
     height: 24px;
