--- a/css/update/main-3.0.5.css
+++ b/css/update/main-3.0.5.css
@@ -14,6 +14,7 @@
 
 /* Extension */
 @import url("https://mr-miner1.github.io/Better-Badges/src/badges.css");
+@import url("https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css");
 
   
 :root {
@@ -85,6 +86,10 @@
     /* --logo-obsidian: url(""); */
 
     --update-notice: none;
+
+    --HSL-server-icon-size: 40px;  /* Size of the server icons | DEFAULT: 40px */
+    --HSL-server-spacing: 10px;  /* Spacing between each server icon | DEFAULT: 10px */
+    --HSL-server-direction: column; /* Direct of the server list. | Options: column, column-reverse | DEFAULT: column */
 }
 
 .theme-light {
@@ -777,6 +782,14 @@ input.inputDefault-3FGxgL.input-2g-os5.noBorder-2p63tM {
         background-color: var(--background-low);
         border-radius: 4px;
         border-radius: 20px;
+    }
+
+    #profile-customization-tab > div:nth-child(5) > div > div > div.customizationSection-IGy2fS.preview-Z55SA3 > div > div.headerTop-3GPUSF > div.profileBadges-2pItdR.container-1gYwHN {
+        position: absolute;
+        max-width: unset;
+        justify-content: flex-start;
+        top: 115px;
+        left: 15px;
     }
     
     /* Gift Inventory */
