--- a/css/update/main-3.0.5.css
+++ b/css/update/main-3.0.5.css
@@ -1516,6 +1516,10 @@ svg.bd-switch-symbol {
     border-radius: 20px;
 }
 
+.overlayTitle-2efoIF {
+    border-radius: 20px;
+}
+
 /* SPOTIFY */
 .container-8Futzw {
     width: 330px !important;
