--- a/css/update/main-3.0.5.css
+++ b/css/update/main-3.0.5.css
@@ -414,12 +414,50 @@ code {
 }
 
 .messageInputContainer-2rGDH8 {
-    border: 1px solid transparent;
-    border-radius: 4px;
+    border: 2px solid transparent;
+    transition: .2s;
+    border-radius: 20px;
+}
+.messageInputContainer-2rGDH8:hover {
+    border: 2px solid #b9bbbe;
+    border-radius: 20px;
 }
 
 .overlayBackground-arbZMT {
-    background-color: transparent;
+    background-color: rgba(0,0,0,0.2);
+    border-radius: 20px;
+}
+
+.profileBadges-31rDHI {
+    background-color: rgba(0,0,0,0.2);
+    border-radius: 20px;
+}
+
+
+/* NOTE PROFILE */
+
+.overlayBackground-arbZMT > div.scroller-1jBQYo.thin-31rlnD.scrollerBase-_bVAAt > div.section-3FmfOT.lastSection-3_1yKt > h3 {
+    display: none;
+}
+
+.overlayBackground-arbZMT > div.scroller-1jBQYo.thin-31rlnD.scrollerBase-_bVAAt > div.section-3FmfOT.lastSection-3_1yKt > div > textarea {
+    display: none;
+}
+
+.overlayBackground-arbZMT > div.scroller-1jBQYo.thin-31rlnD.scrollerBase-_bVAAt > div:nth-child(3) > h3 {
+    display: none;
+}
+
+.overlayBackground-arbZMT > div.scroller-1jBQYo.thin-31rlnD.scrollerBase-_bVAAt > div:nth-child(3) > div > textarea {
+    display: none;
+}
+
+.overlayBackground-arbZMT > div.scroller-1jBQYo.thin-31rlnD.scrollerBase-_bVAAt > div:nth-child(4) > h3 {
+    display: none;
+}
+
+.overlayBackground-arbZMT > div.scroller-1jBQYo.thin-31rlnD.scrollerBase-_bVAAt > div:nth-child(4) > div > textarea {
+    display: none;
 }
 
 /*SHADOW */
